<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="false"
        android:layout_centerHorizontal="true">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Alert Preferences"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/AlertOnMustSeeBands"
                    android:layout_column="9"
                    android:layout_marginLeft="40dp" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/mustSeecheckBox"
                    android:layout_column="27"
                    android:layout_marginLeft="40dp" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/AlertOnMightSeeBands"
                    android:layout_column="9"
                    android:layout_marginLeft="40dp" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/mightSeecheckBox"
                    android:layout_column="27"
                    android:layout_marginLeft="40dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/MinutesBeforeEventtoAlert"
                    android:layout_column="9"
                    android:layout_marginLeft="40dp" />

                <EditText
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/minBeforeEvent"
                    android:layout_marginLeft="40dp"
                    android:layout_column="27"
                    android:numeric="integer"
                    android:editable="true" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/AlertForShows"
                    android:layout_column="9"
                    android:layout_marginLeft="40dp" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/alertForShows"
                    android:layout_column="27"
                    android:layout_marginLeft="40dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/AlertForSpecialEvents"
                    android:layout_column="9"
                    android:layout_marginLeft="40dp" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/alertForSpecialEvents"
                    android:layout_column="27"
                    android:layout_marginLeft="40dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/AlertForMeetingandGreetEvents"
                    android:layout_column="9"
                    android:layout_marginLeft="40dp" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/alertForMeetAndGreet"
                    android:layout_column="27"
                    android:layout_marginLeft="40dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/AlertForClinics"
                    android:layout_column="9"
                    android:layout_marginLeft="40dp" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/alertForClinics"
                    android:layout_column="27"
                    android:layout_marginLeft="40dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/AlertForAlbumListeningEvents"
                    android:layout_column="9"
                    android:layout_marginLeft="40dp" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/alertForAlbumListen"
                    android:layout_column="27"
                    android:layout_marginLeft="40dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/UseLastYearsData"
                    android:layout_column="9"
                    android:layout_marginLeft="40dp" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/useLastYearsData"
                    android:layout_column="27"
                    android:layout_marginLeft="40dp" />
            </TableRow>

        </TableLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="330dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/LastYearsFeatureExplication"
            android:gravity="center_horizontal"
            android:textStyle="normal|italic"
            android:textSize="11dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />
    </LinearLayout>
</RelativeLayout>